--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/bdsolicitud
+spring.datasource.url=jdbc:postgresql://localhost:5432/dbsolicitud
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
-server.port=8088
+server.port=8084
